# braille-assistant

./: .gitignore  README.md
Braille-Assistant/: .gitignore
Braille-Assistant/app/: CMakeLists.txt  build.gradle
Braille-Assistant/app/src/androidTest/java/org/example/brailleassistant/: ExampleInstrumentedTest.java
Braille-Assistant/app/src/main/: AndroidManifest.xml
Braille-Assistant/app/src/main/cpp/: LibLouisWrapper.c  lib-louis-wrapper.cpp  native-lib.cpp
Braille-Assistant/app/src/main/cpp/include/: native-lib.h
Braille-Assistant/app/src/main/cpp/liblouis/liblouis/: lou_backTranslateString.c
Braille-Assistant/app/src/main/java/org/example/brailleassistant/activities/: MainActivity.java
Braille-Assistant/app/src/main/java/org/example/brailleassistant/processors/: CellCalculator.java  CellFinder.java  CellParser.java  Filter.java  FormattingLUTs.java  GradeOneLUTs.java  IProcessor.java  ProcessorRegistry.java  ResizeImage.java  RotationCorrection.java
Braille-Assistant/app/src/main/java/org/example/brailleassistant/utils/: BrailleCellCalculator.java  BrailleCellFinder.java  BrailleCellParser.java  BrailleFilter.java  BraillePipeline.java  BrailleRotationCorrection.java  Camera.java  CameraFrameReader.java  CameraOverlayRenderer.java  CellParserConfig.java  FormattingLUTs.java  GradeOneLUTs.java  LibLouisWrapper.java  ZipResourceExtractor.java
Braille-Assistant/app/src/main/res/drawable/: round_background.xml
Braille-Assistant/app/src/main/res/layout/: activity_main.xml
Braille-Assistant/app/src/main/res/values/: colors.xml  strings.xml
Braille-Assistant/app/src/test/java/org/example/brailleassistant/: ExampleUnitTest.java
Braille_Algorithm_Development/: .gitignore
(+14 files in other folders)
